# django-signalhooks

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml
signalhooks/: apps.py  hooks.py
signalhooks/serializer/: nested.py
tests/: expected_responses.py  models.py  settings.py  test_fixtures.py  test_hooks.py  test_serializer.py
tests/migrations/: 0001_initial.py
