[tool.poetry]
name = "django-signalhooks"
version = "0.1.0"
description = ""
authors = ["Martin Zugnoni <martin.zugnoni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.7"
boto3 = "^1.14.2"
black = "^19.10b0"
requests = "^2.23.0"
moto = "^1.3.14"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
moto = "^1.3.14"
pytest = "^5.4.3"
pytest-django = "^3.9.0"
responses = "^0.10.15"
pytest-cov = "^2.10.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
